K1J-1525: Migrate jaxrs to spring mvc for rest apis - Step 8.15
Requires an updated common (4.2.0.+) that also includes removal of jaxrs-related config